@@ -22,6 +22,8 @@ and Scott Allen for contributing to this release.
 - "Using jEdit" section of the jEdit user's guide is now mostly up to
   date for jEdit 4.2.
 
+- Fixed various mistakes in the documentation (Justin Dieters).
+
 }}}
 {{{ Syntax Highlighting
 
@@ -54,8 +56,8 @@ and Scott Allen for contributing to this release.
 
 - Fixed a few dockable window layout problems.
 
-- Fix for numeric keypad not working after switch virtual desktops with
-  various keyboard sequences on Linux.
+- Fix for numeric keypad not working after switching virtual desktops
+  with various keyboard sequences on Linux.
 
 - Fixed a performance regression -- the entire text area was being
   repainted on every edit.
